--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@ body {
 <div class="header">
   <h1>My static Website using docker</h1>
   <h2> AMAZON SHOPPPING WEBSITE </h2>
-  <h3>Products</h3>
-  <!--<h3>Carts</h3>-->
+  <h3>Carts</h3>
+  <!--<h3>products</h3>-->
   <!--<h3>Payments</h3>-->
   <!--<h3>Reviews</h3>-->
   <p>Docker is integrated with jenkins and this process is done through JENKINS PIPELINE</p>
